product table fix
